# oxide

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: closures.ox  collections.ox  comprehensions.ox  constants.ox  counter.ox  enums.ox  factorial.ox  factorial.vb  fibonacci.ox  generics.ox  hashmaps.ox  hashmaps.vb  hello.ox  impl.ox  iterators.ox  kwargs.ox  loops.ox  operator_overloading.ox  references.ox  results.ox  slices.ox  slices.vb  strings.ox  structs.ox  tuples.ox  type_aliases.ox
src/oxide/: checker.py  cli.py  lexer.py  parser.py
src/vibec/: __init__.py  ast.py  checker.py  cli.py  codegen.py  compiler.py  lexer.py  parser.py  tokens.py
tests/: test_compiler.py
